--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 h1 {
-    color: lightcoral;
+    color: darkblue;
     font-size: 45px;
     text-transform: uppercase;
     margin-bottom: 40px;
@@ -20,6 +20,7 @@ h1 {
 .container {
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 16px;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
     padding: 25px 30px;
     max-width: 500px;
     text-align: center;
@@ -34,10 +35,11 @@ p {
 
 form {
     display: flex;
+    align-items: center;
 }
 
 label {
-    font-size: 19px;
+    font-size: 18px;
     margin-right: 10px;
     color: #81ecec;
 }
