--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    color: #fff;
+    background-color: rgba(236, 236, 236, 0.81);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,7 +18,7 @@ h1 {
 }
 
 .container {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(62, 27, 69, 0.8);
     border-radius: 16px;
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
     padding: 25px 30px;
@@ -41,7 +41,7 @@ form {
 label {
     font-size: 18px;
     margin-right: 10px;
-    color: #81ecec;
+    color: #dfe6e9;
 }
 
 input[type="text"] {
@@ -50,8 +50,6 @@ input[type="text"] {
     border-radius: 8px;
     margin-right: 10px;
     outline: none;
-    background: #2d3436;
-    color: #fff;
     transition: border 0.3s ease;
 }
 
